syntax = "proto3";
package user.v1;
import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}
message GetUserRequest { string id = 1; }
message GetUserResponse {
  string id = 1;
  google.protobuf.Timestamp created_at = 3;
}
